--- a/kMeans.ipynb
+++ b/kMeans.ipynb
@@ -318,9 +318,10 @@
     "    for i in range(k):\n",
     "        points = [X[j] for j in range(len(X)) if clusters[j] == i]\n",
     "        C[i] = np.mean(points, axis=0)\n",
-    "        \n",
-    "    colors = ['r', 'g', 'b', 'y', 'c', 'm']\n",
-    "    fig, ax = plt.subplots()\n",
+    "    \n",
+    "    try: \n",
+    "    #colors = ['r', 'g', 'b', 'y', 'c', 'm']\n",
+    "    #fig, ax = plt.subplots()\n",
     "    for i in range(k):\n",
     "        points = np.array([X[j] for j in range(len(X)) if clusters[j] == i])\n",
     "        ax.scatter(points[:, 0], points[:, 1], s=7, c=colors[i])\n",
